Agregando class a section

--- a/productos.html
+++ b/productos.html
@@ -65,7 +65,7 @@
                     <p> Turbo Volkswagen Vento 2.0 </p>
             </section>
 
-            <section >
+            <section class="animaciones-container">
                 <div class="animacion-turbo1"></div>
                 <div class="animacion-turbo2"></div>
                 <div class="animacion-turbo3"></div>
