--- a/productos.html
+++ b/productos.html
@@ -49,20 +49,24 @@
                 </article>
             </div>
 
-            <section class="turbos">
-                    <h2> Productos </h2>
-                    <img src="galeria/turbo2_ford_ranger_3.2.jpg" alt="turbo1" height="250" width="240">
-                    <p> Turbo Ford Ranger 3.2</p>
-                    <img src="galeria/turbo_chevrolet_s10_2.8.jpg" alt="turbo2" height="250" width="250">
-                    <p> Turbo Chevrolet S10 2.8 </p>
-                    <img src="galeria/turbo_mercedesBenz_1518.jpg" alt="turbo3" height="250" width="260">
-                    <p> Turbo Mercedes Benz 1518 </p>
-                    <img src="galeria/turbo_nissan_frontier_2.3.jpg" alt="turbo4" height="250" width="320">
-                    <p> Turbo Nissan Frontier 2.3 </p>
-                    <img src="galeria/turbo_toyota_hilux_3.0.jpg" alt="turbo5" height="250" width="290">
-                    <p> Turbo Toyota Hilux 3.0 </p>
-                    <img src="galeria/turbo_volkswagen_vento2.0.jpg" alt="turbo6" height="250" width="300">
-                    <p> Turbo Volkswagen Vento 2.0 </p>
+           <section class="turbos">
+                 <h2> Productos </h2>
+                    <div class="dos">
+                        <div class="tres">
+                            <img src="galeria/turbo2_ford_ranger_3.2.jpg" alt="turbo1" height="250" width="240">
+                            <p> Turbo Ford Ranger 3.2</p>
+                            <img src="galeria/turbo_chevrolet_s10_2.8.jpg" alt="turbo2" height="250" width="250">
+                            <p> Turbo Chevrolet S10 2.8 </p>
+                            <img src="galeria/turbo_mercedesBenz_1518.jpg" alt="turbo3" height="250" width="260">
+                            <p> Turbo Mercedes Benz 1518 </p>
+                            <img src="galeria/turbo_nissan_frontier_2.3.jpg" alt="turbo4" height="250" width="320">
+                            <p> Turbo Nissan Frontier 2.3 </p>
+                            <img src="galeria/turbo_toyota_hilux_3.0.jpg" alt="turbo5" height="250" width="290">
+                            <p> Turbo Toyota Hilux 3.0 </p>
+                            <img src="galeria/turbo_volkswagen_vento2.0.jpg" alt="turbo6" height="250" width="300">
+                            <p> Turbo Volkswagen Vento 2.0 </p>
+                        </div>
+                    </div>
             </section>
 
             <section class="animaciones-container">
