Agregando etiqueta h2 en section

--- a/productos.html
+++ b/productos.html
@@ -70,6 +70,7 @@
             </section>
 
             <section class="animaciones-container">
+                <h2> Turbos 3D</h2>
                 <div class="animacion-turbo1"></div>
                 <div class="animacion-turbo2"></div>
                 <div class="animacion-turbo3"></div>
