--- a/productos.html
+++ b/productos.html
@@ -70,10 +70,12 @@
             </section>
 
             <section class="animaciones-container">
-                <h2> Turbos 3D</h2>
-                <div class="animacion-turbo1"></div>
-                <div class="animacion-turbo2"></div>
-                <div class="animacion-turbo3"></div>
+                <div class="animaciones-fila">
+                    <h2> Turbos 3D</h2>
+                    <div class="animacion-turbo1"></div>
+                    <div class="animacion-turbo2"></div>
+                    <div class="animacion-turbo3"></div>
+                </div>
             </section>
         </main>
         <footer id="footer">
