--- a/productos.html
+++ b/productos.html
@@ -70,8 +70,8 @@
             </section>
 
             <section class="animaciones-container">
-                <div class="animaciones-fila">
-                    <h2> Turbos 3D</h2>
+                <h2> Turbos 3D</h2>
+                <div class="animaciones-fila"></div>
                     <div class="animacion-turbo1"></div>
                     <div class="animacion-turbo2"></div>
                     <div class="animacion-turbo3"></div>
