--- a/productos.html
+++ b/productos.html
@@ -71,7 +71,7 @@
 
             <section class="animaciones-container">
                 <h2> Turbos 3D</h2>
-                <div class="animaciones-fila"></div>
+                <div class="animaciones-fila">
                     <div class="animacion-turbo1"></div>
                     <div class="animacion-turbo2"></div>
                     <div class="animacion-turbo3"></div>
