Agregando etiqueta article a main

--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
     <div>
         <header id="encabezado">
             <div class="logo">
-                <img src="galeria/logo.png" alt="HR Turbos" height="180" width="350">
+                <img src="galeria/logo.png" alt="HR Turbos" height="54" width="105">
             </div>
 
             <nav id="navegación">
@@ -34,6 +34,10 @@
                 <article class="taller">
                     <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3" height="640" width="360">
                     <p> Así se ve nuestro lugar de trabajo </p>
+                </article>
+                <article class="taller">
+                    <img src="galeria/IMG-20250823-WA0005.jpg" alt="vista5" height="360" width="640">
+                    <p> El pedido de un cliente</p>
                 </article>
                 <article class="taller">
                     <img src="galeria/IMG-20250823-WA0007.jpg" alt="vista2" height="360" width="640">
