--- a/contacto.html
+++ b/contacto.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <title>Contacto</title>
-=======
     <title>contacto</title>
     <link rel="stylesheet" href="contactos.css">
->>>>>>> 3594ad58fde3f35cbfcc8b2b1978b901ded05907
 </head>
 <body>
-    <header>
-    
+   header class="header"> 
+    <div class="logo"> 
+      <img src="galeria/logo.png" alt="HR Turbos"> 
+    </div> 
+    <nav class="menu"> 
+      <ul>
+        <li><a href="productos.html" class="btn">Productos y Galería</a></li>
+        <li><a href="servicios.html" class="btn">Servicios</a></li> 
+      </ul> 
+    </nav>
+  </header>
 
-
-
-
-
-
-
-    </header>
-
-    <!--de aca para abajo no hagas nada -->
+  <section class="intro">
+    <h1>CONTACTANOS</h1> 
+    <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
+  </section>
     <main class="grid-container">
         <div class="contacto">
             <h3>Visítanos</h3>
