--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="contactos.css">
 </head>
 <body>
-   header class="header"> 
+  <header class="header"> 
     <div class="logo"> 
       <img src="galeria/logo.png" alt="HR Turbos"> 
     </div> 
