Añadiendo diseño a clase menu

--- a/contacto.html
+++ b/contacto.html
@@ -19,10 +19,10 @@
     </nav>
   </header>
 
-  <section class="intro">
+  <main class="intro">
     <h1>CONTACTANOS</h1> 
     <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
-  </section>
+  </main>
     <main class="grid-container">
         <div class="contacto">
             <h3>Visítanos</h3>
