Agregando carpeta css con los styles de todas las páginas

--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="es-ar">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>Inicio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HR-TURBOS</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-      <div class="capacolor"></div>   <!--divisor para la capa transparente sobre el fondo-->
- </div>
+    <div class="hero-section">
+        <div class="overlay"></div>
 
+        <header class="main-header">
+            <div class="logo">
+        <img src="img/logo.png.jpg" alt="HR logo">
+    </div>
 
 <header>
-<nav >  <!--menu desplegable--> 
-  <ul class="menu"> 
+     <nav class="menu">
+                <ul id="lista">
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                </ul>
+            </nav>
 
-    <li> <a href="https://paulaarnol.github.io/proyecto_HR/contacto.html">➟contacto </a> </li>
-    <li> <a href="https://paulaarnol.github.io/proyecto_HR/productos.html">➟Producto</a> </li>
-    <li> <a href="https://paulaarnol.github.io/proyecto_HR/servicios.html">➟Servicios</a></li>
-     
-    
-</ul>
-</nav>
 
 </header>
 
