--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HR Turbos - Taller Mecánico</title>
-    <link rel="stylesheet" href="serviciosstyle.css">
+    <link rel="stylesheet" href="css/serviciosstyle.css">
 </head>
 <body>
     <header>
