Modificando tipo de letra

--- a/contacto.html
+++ b/contacto.html
@@ -26,21 +26,21 @@
     <main class="grid-container">
         <div class="contacto">
             <h3>Visítanos</h3>
-            <img src="galeria/ubicacion.jpeg" alt="Ubicación" width="90" height="90">
+            <img src="galeria/ubi.jpg" alt="Ubicación" width="90" height="90">
             <button class="boton-le">
                 <p><a href="Int. Nordenstrom 925">Int. Nordenstrom 925</a></p>
             </button>
         </div>
         <div class="contacto">
          <h3>Llamanos</h3>
-            <img src="galeria/icono-telefono-rojo-png-whatsapp-logo-red-11562862504g1ozq1wfuy.png" alt="telefono" width="90" height="90">
+            <img src="galeria/telefono.jpg" alt="telefono" width="90" height="90">
                 <button class="boton-le">
                        <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
                 </button>
         </div>    
         <div class="contacto">
          <h3>Escríbinos</h3>
-            <img src="galeria/617616eaa2cb8cdf5fe02dfde88632de.jpg" alt="Correo" width="90" height="90">  
+            <img src="galeria/logo email.jpg" alt="Correo" width="90" height="90">  
                <button class="boton-le">
                       <p><a href="raularnol@yahoo.com">raularnol@yahoo.com</a></p>
               </button>
