Añadiendo efectos visuales al css contacto

--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
                 </button>
         </div>    
         <div class="contacto">
-         <h3>Escríbinos</h3>
+         <h3>Escríbenos</h3>
             <img src="galeria/logo email.jpg" alt="Correo" width="90" height="90">  
                <button class="boton-le">
                       <p><a href="raularnol@yahoo.com">raularnol@yahoo.com</a></p>
