Cambiando nombre de class contacto

--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
     <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
   </main>
     <main class="grid-container">
-        <div class="contacto">
+        <div class="contacto 
             <h3>Visítanos</h3>
             <img src="galeria/ubi.jpg" alt="Ubicación" width="90" height="90">
             <button class="boton-le">
