--- a/contacto.html
+++ b/contacto.html
@@ -24,21 +24,21 @@
     <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
   </main>
     <main class="grid-container">
-        <div class="contacto 
+        <div class="contacto resaltar">
             <h3>Visítanos</h3>
             <img src="galeria/ubi.jpg" alt="Ubicación" width="90" height="90">
             <button class="boton-le">
                 <p><a href="Int. Nordenstrom 925">Int. Nordenstrom 925</a></p>
             </button>
         </div>
-        <div class="contacto">
+        <div class="contacto resaltar">
          <h3>Llamanos</h3>
             <img src="galeria/telefono.jpg" alt="telefono" width="90" height="90">
                 <button class="boton-le">
                        <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
                 </button>
         </div>    
-        <div class="contacto">
+        <div class="contacto resaltar">
          <h3>Escríbenos</h3>
             <img src="galeria/logo email.jpg" alt="Correo" width="90" height="90">  
                <button class="boton-le">
@@ -47,7 +47,10 @@
         </div>
     </main>      
     <section class="mapa">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.205910506342!2d-68.0693406!3d-38.964966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3382c83e4627%3A0x52606904c8318d19!2sHR%20turbos%20y%20servicios!5e0!3m2!1sen!2sar!4v1756604401136!5m2!1sen!2sar" width="2000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        <iframe 
+
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.205910506342!2d-68.0693406!3d-38.964966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3382c83e4627%3A0x52606904c8318d19!2sHR%20turbos%20y%20servicios!5e0!3m2!1sen!2sar!4v1756604401136!5m2!1sen!2sar" width="2000" height="450" style="border:0;" 
+        allowfullscreen=" " loading="lazy"  referrerpolicy="no-referrer-when-downgrade">
 
         </iframe>
     </section>       
@@ -58,3 +61,5 @@
             <a href="tel:+5492995308980">+54 9 299 530-8980</a>
         </p>
     </footer>
+</body>
+</html>
