Modificando class boton-le en html

--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
         <div class="contacto resaltar">
          <h3>Escríbenos</h3>
             <img src="galeria/logo email.jpg" alt="Correo" width="90" height="90">  
-               <button class="boton-le">
+               <button class="bton-le">
                       <p><a href="raularnol@yahoo.com">raularnol@yahoo.com</a></p>
               </button>
         </div>
