Se finalizo modificacion  en class boton-le en html

--- a/contacto.html
+++ b/contacto.html
@@ -27,21 +27,21 @@
         <div class="contacto resaltar">
             <h3>Visítanos</h3>
             <img src="galeria/ubi.jpg" alt="Ubicación" width="90" height="90">
-            <button class="boton-le">
+            <button class="boton-le animar">
                 <p><a href="Int. Nordenstrom 925">Int. Nordenstrom 925</a></p>
             </button>
         </div>
         <div class="contacto resaltar">
          <h3>Llamanos</h3>
             <img src="galeria/telefono.jpg" alt="telefono" width="90" height="90">
-                <button class="boton-le">
+                <button class="boton-le animar">
                        <p><a href="+54  0299 15-530-8980"> 0299 15-530-8980</a></p>
                 </button>
         </div>    
         <div class="contacto resaltar">
          <h3>Escríbenos</h3>
             <img src="galeria/logo email.jpg" alt="Correo" width="90" height="90">  
-               <button class="bton-le">
+               <button class="boton-le animar">
                       <p><a href="raularnol@yahoo.com">raularnol@yahoo.com</a></p>
               </button>
         </div>
