Agregando section a html

--- a/productos.html
+++ b/productos.html
@@ -29,7 +29,7 @@
             <div class="galeria">
                 <article class="taller">
                     <img src="galeria/IMG-20250823-WA0004.jpg" alt="vista1" height="640" width="360">
-                    <p>Primer vista del taller desde arriba.</p>
+                    <p class="taller">Primer vista del taller desde arriba.</p>
                 </article>
                 <article class="taller">
                     <img src="galeria/IMG-20250823-WA0008.jpg" alt="vista3" height="640" width="360">
@@ -81,6 +81,11 @@
                     <div class="animacion-turbo3"></div>
                 </div>
             </section>
+
+            <section>
+                <p>Dueño del negocio: Raul Arnol</p>
+                <img src="galeria/IMG-20251011-WA0020.jpg" alt="vista1" height="640" width="480">
+            </section>
         </main>
         <footer id="footer">
             <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
@@ -90,6 +95,5 @@
             </p>
         </footer>
     </div>
-    <script src="JS/productos.js"></script>
 </body>
 </html>
