--- a/productos.html
+++ b/productos.html
@@ -82,9 +82,24 @@
                 </div>
             </section>
 
-            <section>
-                <p>Dueño del negocio: Raul Arnol</p>
-                <img src="galeria/IMG-20251011-WA0020.jpg" alt="vista1" height="640" width="480">
+            <section  style="display: flex; align-items: flex-start; gap: 40px;">
+                <h2>Dueño del negocio: Raul Arnol</h2>
+                <img src="galeria/IMG-20251011-WA0020.jpg" alt="vista1" height="640" width="480" class="raul">
+            
+                <form style="display: flex; flex-direction: column; gap: 10px; max-width: 300px; font-family: Arial;">
+                    <h3>Contáctanos</h3>
+
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+
+                    <label for="apellido">Apellido:</label>
+                    <input type="text" id="apellido" name="apellido" required>
+
+                    <label for="telefono">Teléfono:</label>
+                    <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" required>
+
+                    <button type="submit">Enviar</button>
+                </form>
             </section>
         </main>
         <footer id="footer">
