Borrando texto de section

--- a/productos.html
+++ b/productos.html
@@ -81,13 +81,13 @@
                     <div class="animacion-turbo3"></div>
                 </div>
             </section>
-
+            <h2>Dueño del negocio: Raul Arnol</h2>
             <section  style="display: flex; align-items: flex-start; gap: 40px;">
-                <h2>Dueño del negocio: Raul Arnol</h2>
+                
                 <img src="galeria/IMG-20251011-WA0020.jpg" alt="vista1" height="640" width="480" class="raul">
             
                 <form style="display: flex; flex-direction: column; gap: 10px; max-width: 300px; font-family: Arial;">
-                    <h3>Contáctanos</h3>
+                    <h3>Contactanos</h3>
 
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
