Modificando texto en main

--- a/productos.html
+++ b/productos.html
@@ -81,7 +81,7 @@
                     <div class="animacion-turbo3"></div>
                 </div>
             </section>
-            <h2>Dueño del negocio: Raul Arnol</h2>
+            <h2>¿Tenes consultas sobre algún producto?</h2>
             <section  style="display: flex; align-items: flex-start; gap: 40px;">
                 
                 <img src="galeria/IMG-20251011-WA0020.jpg" alt="vista1" height="640" width="480" class="raul">
