--- a/productos.html
+++ b/productos.html
@@ -98,7 +98,7 @@
                     <label for="telefono">Teléfono:</label>
                     <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" required>
 
-                    <button type="submit">Enviar</button>
+                    <button type="submit" class="boton-enviar">Enviar</button>
                 </form>
             </section>
         </main>
