--- a/contacto.html
+++ b/contacto.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a href="productos.html" class="btn">Productos y Galería</a></li>
         <li><a href="servicios.html" class="btn">Servicios</a></li> 
+        <li><a href="index.html" class="btn">Inicio</a></li> 
       </ul> 
     </nav>
   </header>
