Unificando cajas main y grid-container

--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <main class="intro">
+  <main class="contacto-junto">
     <h1>CONTACTANOS</h1> 
     <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
   </main>
