--- a/contacto.html
+++ b/contacto.html
@@ -21,9 +21,10 @@
   </header>
 
   <main class="contacto-junto">
+    <section class="intro">
     <h1>CONTACTANOS</h1> 
     <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
-  </main>
+      
     <main class="grid-container">
         <div class="contacto resaltar">
             <h3>Visítanos</h3>
