Cerrando section intro

--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
     <section class="intro">
     <h1>CONTACTANOS</h1> 
     <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
-      
+    </section>
     <main class="grid-container">
         <div class="contacto resaltar">
             <h3>Visítanos</h3>
