Fin de modificacion en etiqueta a

--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
         <div class="contacto resaltar">
          <h3>Escríbenos</h3>
             <img src="galeria/logo email.jpg" alt="Correo" width="90" height="90">  
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=raularnol@yahoo.com&su=Consulta%20HR%20Turbos&body=Hola,%20quiero%20consultar%20sobre%20sus%20servicios."  target="_blank"  class="boton-le animar">     
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=raularnol@yahoo.com&su=Consulta%20HR%20Turbos&body=Hola,%20quiero%20consultar%20sobre%20sus%20servicios."  target="_blank"  class="boton-le animar"></a>  
                       
               
         </div>
