Cerrando section grid-container

--- a/contacto.html
+++ b/contacto.html
@@ -41,11 +41,9 @@
         <div class="contacto resaltar">
          <h3>Escríbenos</h3>
             <img src="galeria/logo email.jpg" alt="Correo" width="90" height="90">  
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=raularnol@yahoo.com&su=Consulta%20HR%20Turbos&body=Hola,%20quiero%20consultar%20sobre%20sus%20servicios."  target="_blank"  class="boton-le animar"></a>  
-                      
-              
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=raularnol@yahoo.com&su=Consulta%20HR%20Turbos&body=Hola,%20quiero%20consultar%20sobre%20sus%20servicios."  target="_blank"  class="boton-le animar">raularnol@yahoo.com</a>     
         </div>
-    </main>      
+    </section>
     <section class="mapa">
         <iframe 
 
