--- a/contacto.html
+++ b/contacto.html
@@ -29,13 +29,12 @@
         <div class="contacto resaltar">
             <h3>Visítanos</h3>
             <img src="galeria/ubi.jpg" alt="Ubicación" width="90" height="90">
-            
-                <p><a href="Int. Nordenstrom 925" button class="boton-le animar">Int. Nordenstrom 925</a></p>
+                <a href="Int. Nordenstrom 925" button class="boton-le animar">Int. Nordenstrom 925</a>
         </div>
         <div class="contacto resaltar">
          <h3>Llamanos</h3>
             <img src="galeria/telefono.jpg" alt="telefono" width="90" height="90">
-              <p><a href="+54  0299 15-530-8980"  button class="boton-le animar">0299 15-530-8980</a></p>
+              <a href="+54  0299 15-530-8980"  button class="boton-le animar">0299 15-530-8980</a>
                 
         </div>    
         <div class="contacto resaltar">
@@ -44,6 +43,7 @@
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=raularnol@yahoo.com&su=Consulta%20HR%20Turbos&body=Hola,%20quiero%20consultar%20sobre%20sus%20servicios."  target="_blank"  class="boton-le animar">raularnol@yahoo.com</a>     
         </div>
     </section>
+  </main>
     <section class="mapa">
         <iframe 
 
