Modificando keyframes particula de css contacto

--- a/contacto.html
+++ b/contacto.html
@@ -59,6 +59,6 @@
             <a href="tel:+5492995308980">+54 9 299 530-8980</a>
         </p>
     </footer>
-    <script src="contacto.js"></script>
+    <script src="contactos.js"></script>
 </body>
 </html>
