Agregando link a Css

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HR Turbos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
