--- a/index.html
+++ b/index.html
@@ -69,5 +69,26 @@
 </head>
 <body>
     
+<div class="top-color-bar">
+    <header class="main-header">
+        <div class="logo">
+            <img src="galeria/logo.png" alt="HR logo">
+        </div>
+        <nav id="navegación">
+            <ul>
+                <li><a href="productos.html">Productos y galeria</a></li>
+                <li><a href="contacto.html">Contactos</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+            </ul>
+        </nav>
+
+        
+
+        </nav>
+    </header>
+</div>
+
+
+
 </body>
 </html>
