--- a/index.html
+++ b/index.html
@@ -81,14 +81,19 @@
                 <li><a href="servicios.html">Servicios</a></li>
             </ul>
         </nav>
-
-        
-
-        </nav>
     </header>
 </div>
 
+<div class="hero-section">
+    <div class="overlay"></div>
 
+    <main class="content">
+        <div class="text-content">
+
+            
+        </div>
+    </main>
+</div>
 
 </body>
 </html>
