--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
 
   <main class="contacto-junto">
     <section class="intro">
-    <h1>CONTACTANOS</h1> 
+    <h1>CONTÁCTANOS</h1> 
     <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
     </section>
     <section class="grid-container">
