--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,7 @@
                 <a href="Int. Nordenstrom 925" button class="boton-le animar">Int. Nordenstrom 925</a>
         </div>
         <div class="contacto resaltar">
-         <h3>llámanos</h3>
+         <h3>Llámanos</h3>
             <img src="galeria/telefono.jpg" alt="telefono" width="90" height="90">
               <a href="+54  0299 15-530-8980"  button class="boton-le animar">0299 15-530-8980</a>
                 
