--- a/contacto.html
+++ b/contacto.html
@@ -51,13 +51,10 @@
         allowfullscreen=" " loading="lazy"  referrerpolicy="no-referrer-when-downgrade">
 
         </iframe>
-    </section>       
-    <footer id="footer">
-        <p>&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
-        <p>
-            <a href="raularnol@yahoo.com">raularnol@yahoo.com</a> | 
-            <a href="tel:+5492995308980">+54 9 299 530-8980</a>
-        </p>
+    </section> 
+
+    <footer class="main-footer">
+      
     </footer>
     <script src="contactos.js"></script>
 </body>
