Añadiendo clase footer-content al Div

--- a/contacto.html
+++ b/contacto.html
@@ -54,7 +54,7 @@
     </section> 
 
     <footer class="main-footer">
-      <div
+      <div class="footer-content">
       
     </footer>
     <script src="contactos.js"></script>
