--- a/contacto.html
+++ b/contacto.html
@@ -55,7 +55,7 @@
 
     <footer class="main-footer">
       <div class="footer-content">
-         <h3>
+         <h3>HR Turbos</h3>
       
     </footer>
     <script src="contactos.js"></script>
