--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
          <h3>HR Turbos</h3>
          <p>
           <a href="mailto:raularnol@yahoo.com">raularnol@yahoo.com </a>
-          <a>
+          <a href="tel:+5492995308980">+54 9 299 530-8980</a>
     </footer>
     <script src="contactos.js"></script>
 </body>
