--- a/contacto.html
+++ b/contacto.html
@@ -60,7 +60,7 @@
           <a href="mailto:raularnol@yahoo.com">raularnol@yahoo.com </a>
           <a href="tel:+5492995308980">+54 9 299 530-8980</a>
          </p>  
-         <p class="copyright"></p>
+         <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
     </footer>
     <script src="contactos.js"></script>
 </body>
