Cerrando etiqueta Div

--- a/contacto.html
+++ b/contacto.html
@@ -61,6 +61,7 @@
           <a href="tel:+5492995308980">+54 9 299 530-8980</a>
          </p>  
          <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
+      </div>   
     </footer>
     <script src="contactos.js"></script>
 </body>
