Modificando html contacto

--- a/contacto.html
+++ b/contacto.html
@@ -63,6 +63,6 @@
          <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
       </div>   
     </footer>
-    <script src="contactos.js"></script>
+    <script src="JS/contactos.js"></script>
 </body>
 </html>
