--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/contactos.css">
 </head>
 <body>
-  
+  <header>
     <div class="logo"> 
       <img src="galeria/logo.png" alt="HR Turbos"> 
     </div> 
