--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="logo"> 
-      <img src="galeria/logo.png" alt="HR Turbos"> 
+      <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100"> 
     </div> 
     <nav class="menu"> 
       <ul>
