--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
       <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100"> 
     </div> 
     <nav id="navegacion">
-      <ul>
+      <ul id="lista">
         <li><a href="productos.html" class="btn">Productos y Galería</a></li>
         <li><a href="servicios.html" class="btn">Servicios</a></li> 
         <li><a href="index.html" class="btn">Inicio</a></li> 
