Modificando Header de css contacto

--- a/contacto.html
+++ b/contacto.html
@@ -13,9 +13,9 @@
     </div> 
     <nav id="navegacion">
       <ul id="lista">
-        <li><a href="productos.html" class="btn">Productos y Galería</a></li>
+        <li><a href="index.html" class="btn">Inicio</a></li>
         <li><a href="servicios.html" class="btn">Servicios</a></li> 
-        <li><a href="index.html" class="btn">Inicio</a></li> 
+        <li><a href="productos.html" class="btn"></a>Productos</li> 
       </ul> 
     </nav>
   </header>
