Modificando color de clase contacto

--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
       <ul id="lista">
         <li><a href="index.html" class="btn">Inicio</a></li>
         <li><a href="servicios.html" class="btn">Servicios</a></li> 
-        <li><a href="productos.html" class="btn"></a>Productos</li> 
+        <li><a href="productos.html" class="btn">Productos</a></li> 
       </ul> 
     </nav>
   </header>
