Haciendo modificaciones en el header

--- a/productos.html
+++ b/productos.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <div>
-        <header id="encabezado">
+        <header>
             <div class="logo">
-                <img src="galeria/logo.png" alt="HR Turbos" height="54" width="105">
+                <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100">
             </div>
 
-            <nav id="navegación">
+            <nav id="navegacion">
                 <ul id="lista">
-                    <li><a href="index.html" class="activo">Inicio</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="productos.html"  class="activo">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
