--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
          </main>     
 </div>
 
-<footer class="main-footer">
-    <div class="footer-content">
-        
-    </div>
-</footer>
+        <footer class="main-footer">
+        <div class="footer-content">
+            <h3>CONTACTOS:</h3>
+            <p>
+                <a href="mailto:raularnol@yahoo.com">Gmail</a> |
+                <a href="tel:‪‪+5492995308980‬‬">Telefono</a>
+            </p>
+        </div>
+        <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
+    </footer>
 
         
    
