--- a/productos.html
+++ b/productos.html
@@ -84,7 +84,7 @@
             </section>
             
             <div class="comentarios">
-                
+                <h3>¿Tenés alguna duda sobre nuestros productos?</h3>
                 <input type="email" id="correo" placeholder="Tu correo" required/>
                 <textarea id="comentario" placeholder="Escribí tu comentario..." required></textarea>
                 <button id="enviar">Enviar comentario</button>
