--- a/productos.html
+++ b/productos.html
@@ -91,8 +91,14 @@
             </div>
         
         </main>
-        <footer id="footer">
-            
+        <footer>
+            <div class="footer-content">
+            <h3>CONTACTOS:</h3>
+            <p>
+                <a href="mailto:raularnol@yahoo.com">Gmail</a> |
+                <a href="tel:+5492995308980">Teléfono</a>
+            </p>
+        </div>
         </footer>
     </div>
     <script src="JS/productos.js"></script>
