--- a/productos.html
+++ b/productos.html
@@ -98,7 +98,8 @@
                 <a href="mailto:raularnol@yahoo.com">Gmail</a> |
                 <a href="tel:+5492995308980">Teléfono</a>
             </p>
-        </div>
+            </div>
+            <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
         </footer>
     </div>
     <script src="JS/productos.js"></script>
