--- a/servicios.html
+++ b/servicios.html
@@ -94,13 +94,10 @@
         </section>
     </main>
     <footer class="main-footer">
+        <div class="footer-content">
 
+        </div>
 
-
-
-
-
-        
     </footer>
    
       <script src="servicios.js"></script>
