--- a/servicios.html
+++ b/servicios.html
@@ -95,7 +95,7 @@
     </main>
     <footer class="main-footer">
         <div class="footer-content">
-
+                  <h3>CONTACTOS:</h3>
         </div>
 
     </footer>
