--- a/servicios.html
+++ b/servicios.html
@@ -97,7 +97,8 @@
         <div class="footer-content">
                   <h3>CONTACTOS:</h3>
                   <p>
-                    
+                     <a href="mailto:raularnol@yahoo.com">Gmail</a> |
+                <a href="tel:+5492995308980">Teléfono</a>
                   </p>
         </div>
 
