Agregando modal de carga

--- a/productos.html
+++ b/productos.html
@@ -100,6 +100,7 @@
             </div>
             <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
         </footer>
+        <div id="modal-cargando" class="modal-cargando"></div>
     <script src="JS/productos.js"></script>
 </body>
 </html>
