Agregando contenido del modal de carga

--- a/productos.html
+++ b/productos.html
@@ -100,7 +100,12 @@
             </div>
             <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
         </footer>
-        <div id="modal-cargando" class="modal-cargando"></div>
+        <div id="modal-cargando" class="modal-cargando">
+            <div class="modal-contenido">
+                <div class="loader"></div>
+                <p>Cargando...</p>
+                </div>
+        </div>
     <script src="JS/productos.js"></script>
 </body>
 </html>
