--- a/servicios.html
+++ b/servicios.html
@@ -14,8 +14,8 @@
 
         <nav id="navegacion">
             <ul>
-                <li><a href="index.html" class="activo">Inicio</a></li>
-                <li><a href="productos.html">Productos y Galería</a></li>
+                <li><a href="index.html" >Inicio</a></li>
+                <li><a href="productos.html" class="activo">Productos y Galería</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
