--- a/productos.html
+++ b/productos.html
@@ -11,7 +11,7 @@
             <div class="logo">
                 <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100">
             </div>
-
+            <div class="menu-toggle" id="menu-toggle">☰</div>
             <nav id="navegacion">
                 <ul id="lista">
                     <li><a href="index.html">Inicio</a></li>
