Agregando Transiciones de carga

--- a/servicios.html
+++ b/servicios.html
@@ -103,7 +103,12 @@
         </div>
 
     </footer>
-   
+   <div id="modal-cargando" class="modal-cargando">
+  <div class="modal-contenido">
+    <div class="loader"></div>
+    <p>Cargando...</p>
+  </div>
+</div>
       <script src="servicios.js"></script>
 </body>
 </html>
