--- a/servicios.html
+++ b/servicios.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="galeria/logo.png" alt="Logotipo de HR Turbos" width="100px" height="120px">
+             <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100">
         </div>
 
         <nav id="navegacion">
