--- a/servicios.html
+++ b/servicios.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-             <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100">
-        </div>
-        <div class="menu-toggle" id="menu-toggle">☰</div>
+    <div class="logo">
+        <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100">
+    </div>
 
-        <nav id="navegacion">
-            <ul>
-                <li><a href="index.html" >Inicio</a></li>
-                <li><a href="productos.html" class="activo">Productos y Galería</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+    <div class="menu-toggle" id="menu-toggle">☰</div>
+
+    <nav id="navegacion">
+        <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="servicios.html">Servicios</a></li>
+        <li><a href="productos.html" class="activo">Productos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
     </header>
 
     <main>
