Enlazando Js a Html.

--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
         </div>
         <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
     </footer>
-
         
-   
+   <script src="script.js"></script>
 
 
 </body>
