--- a/contacto.html
+++ b/contacto.html
@@ -45,7 +45,7 @@
     </section>
   </main>
   <-- aca aranco yo-->
-   <h2>Nos encontramos en <span>Neuquén</span>
+   <h2>Nos encontramos en <span>Neuquén</span> , visitanos</h2>
     <section class="mapa">
         <iframe 
 
