Modificando el Footer

--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
         <p>Cargando...</p>
       </div>
     </div>
-    
+
     <div id="mensaje-bienvenida" class="modal">
       <div class="modal-contenido">
         <h2>¡Hola!</h2>
@@ -71,17 +71,20 @@
         <button id="cerrar-modal">Continuar</button>
       </div>
     </div>
-
+    
     <footer class="main-footer">
-      <div class="footer-content">
-         <h3>HR Turbos</h3>
-         <p>
-          <a href="mailto:raularnol@yahoo.com">raularnol@yahoo.com </a>
-          <a href="tel:+5492995308980">+54 9 299 530-8980</a>
-         </p>  
-         <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
-      </div>   
-    </footer>
+    <div class="footer-content">
+      <h3>CONTACTOS:</h3>
+      <p>
+        <a href="mailto:raularnol@yahoo.com">Gmail</a> |
+        <a href="tel:+5492995308980">Teléfono</a>
+      </p>
+    </div>
+    <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
+  </footer>
+
+
+
     <script src="JS/contactos.js"></script>
 </body>
 </html>
