--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div class="top-color-bar">
     <header class="main-header">
         <div class="logo">
-            <img src="galeria/logo.png" alt="HR logo">
+            <img src="galeria/logo.png"
+             alt="HR logo">
         </div>
         <nav id="navegación">
             <ul>
