--- a/productos.html
+++ b/productos.html
@@ -90,7 +90,7 @@
             </div>
         
         </main>
-        <footer>
+        <footer class="main-footer">
         <div class="main-footer">
             <h3>CONTACTOS:</h3>
             <p>
