--- a/productos.html
+++ b/productos.html
@@ -91,7 +91,7 @@
         
         </main>
         <footer class="main-footer">
-        <div class="main-footer">
+        <div class="footer-content">
             <h3>CONTACTOS:</h3>
             <p>
                 <a href="mailto:raularnol@yahoo.com">Gmail</a> |
