--- a/productos.html
+++ b/productos.html
@@ -95,7 +95,7 @@
             <h3>CONTACTOS:</h3>
             <p>
                 <a href="mailto:raularnol@yahoo.com">Gmail</a> |
-                <a href="tel:+5492995308980">Teléfono</a>
+                <a href="tel:‪‪+5492995308980‬‬">Teléfono</a>
             </p>
         </div>
         <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
