--- a/servicios.html
+++ b/servicios.html
@@ -112,6 +112,6 @@
     <p>Cargando...</p>
   </div>
 </div>
-      <script src="servicios.js"></script>
+      <script src="JS/servicios.js"></script>
 </body>
 </html>
