--- a/servicios.html
+++ b/servicios.html
@@ -17,7 +17,7 @@
     <nav id="navegacion">
         <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
+        <li><a href="servicios.html" class="activo">Servicios</a></li>
         <li><a href="productos.html">Productos</a></li>
         <li><a href="contacto.html">Contacto</a></li>
         </ul>
