--- a/servicios.html
+++ b/servicios.html
@@ -12,9 +12,9 @@
         <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100">
     </div>
 
-    <div class="menu-toggle" id="menu-toggle">☰</div>
+    <div class="menu" id="menu">☰</div>
 
-    <nav id="navegacion">
+    <nav id="nav">
         <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="servicios.html" class="activo">Servicios</a></li>
