Agregando contenedor para el fondo animado

--- a/productos.html
+++ b/productos.html
@@ -22,6 +22,8 @@
             </nav>
         </header>
 
+        <div class="fondo-animado"></div>
+
         <h1>Productos y galeria</h1>
 
         <main id="main">
