--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     
-<div class="top-color-bar">
-    <header class="main-header">
+    <header>
         <div class="logo">
             <img src="galeria/logo.png"
              alt="HR logo">
