--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     
     <header>
         <div class="logo">
-            <img src="galeria/logo.png"
-             alt="HR logo">
+            <img src="galeria/logo.png" alt="HR logo" height="80" width="100">
         </div>
         <nav id="navegación">
             <ul>
