--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="logo">
             <img src="galeria/logo.png" alt="HR logo" height="80" width="100">
         </div>
+        <div class="menu-toggle" id="menu-toggle">☰</div>
         <nav id="navegación">
             <ul>
                 <li><a href="productos.html">Productos y galeria</a></li>
