--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div class="menu-toggle" id="menu-toggle">☰</div>
         <nav id="navegación">
-            <ul>
-                <li><a href="productos.html">Productos y galeria</a></li>
+            <ul id="lista">
+                <li><a href="index.html"class="activo">Inicio</a></li>
                 <li><a href="contacto.html">Contactos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
             </ul>
