--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <nav id="navegación">
             <ul id="lista">
                 <li><a href="index.html"class="activo">Inicio</a></li>
-                <li><a href="contacto.html">Contactos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="productos.html" >Productos</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
