--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <main class="contacto-junto">
+  <main class="contacto">
     <section class="intro">
     <h1>CONTÁCTANOS</h1> 
     <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
