--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
   <main class="contacto">
     <section class="intro">
     <h1>CONTÁCTANOS</h1> 
-    <p>¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
+     <p class="subtitulo">¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
     </section>
     <section class="grid-container">
         <div class="contacto resaltar">
