Modificando etiqueta div

--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,7 @@
      <p class="subtitulo">¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
     </section>
     <section class="grid-container">
-        <div class="contacto resaltar">
+        <div class="contacto.cj">
             <h3>Visítanos</h3>
             <img src="galeria/ubi-removebg-preview.png" alt="Ubicación" width="90" height="90">
                 <a href="Int. Nordenstrom 925" button class="boton-le animar">Int. Nordenstrom 925</a>
