Agregando etiqueta section

--- a/contacto.html
+++ b/contacto.html
@@ -28,6 +28,14 @@
     </section>
     <section class="grid-container">
         <div class="contacto.cj">
+          <h3>WhatsApp</h3>
+          <div class="info">
+            <a href="https://wa.me/5499112345678?text=Hola!%20Gracias%20por%20comunicarte%20con%20HR%20Turbos%20y%20Servicios.%0A%C2%BFEn%20qu%C3%A9%20podemos
+            %20ayudarte?%0ADeja%20tu%20consulta%20y%20el%20equipo%20de%20HR%20Turbos%20te%20responder%C3%A1%20a%20la%20brevedad.%0AMuchas%20
+            gracias>+54 9 11 1234-5678</a>
+      </div>
+      </div>
+    </section>
             <h3>Visítanos</h3>
             <img src="galeria/ubi-removebg-preview.png" alt="Ubicación" width="90" height="90">
                 <a href="Int. Nordenstrom 925" button class="boton-le animar">Int. Nordenstrom 925</a>
