--- a/contacto.html
+++ b/contacto.html
@@ -56,3 +56,64 @@
     </div>
     </div>
   </section>
+  <h3>Visítanos</h3>
+            <img src="galeria/ubi-removebg-preview.png" alt="Ubicación" width="90" height="90">
+                <a href="Int. Nordenstrom 925" button class="boton-le animar">Int. Nordenstrom 925</a>
+        </div>
+        <div class="contacto resaltar">
+         <h3>Llámanos</h3>
+            <img src="galeria/telefono-removebg-preview.png" alt="telefono" width="90" height="90">
+              <a href="+54  0299 15-530-8980"  button class="boton-le animar">0299 15-530-8980</a>
+                
+        </div>    
+        <div class="contacto resaltar">
+         <h3>Escríbenos</h3>
+            <img src="galeria/logo_email-removebg-preview.png" alt="Correo" width="90" height="90">  
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=raularnol@yahoo.com&su=Consulta%20HR%20Turbos&body=Hola,%20quiero%20consultar%20sobre%20sus%20servicios."  target="_blank"  class="boton-le animar">raularnol@yahoo.com</a>     
+        </div>
+    </section>
+  </main>
+  <-- aca aranco yo-->
+   <h2>Nos encontramos en <span>Neuquén</span> , visitanos</h2>
+    <section class="mapa">
+        <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.205910506342!2d-68.0693406!3d-38.964966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a3382c83e4627%3A0x52606904c8318d19!2sHR%20turbos%20y%20servicios!5e0!3m2!1sen!2sar!4v1756604401136!5m2!1sen!2sar" width="2000" height="450" style="border:0;" 
+        allowfullscreen=" " loading="lazy"  referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      
+    </section> 
+        <div id="modal-cargando" class="modal-cargando">
+      <div class="modal-contenido">
+        <div class="loader"></div>
+        <p>Cargando...</p>
+      </div>
+    </div>
+
+    <div id="mensaje-bienvenida" class="modal">
+      <div class="modal-contenido">
+        <h2>¡Hola!</h2>
+        <p>contactate con <strong>HR TURBO</strong>.</p>
+        <p>Nuestros horarios son</p>
+        <p><strong>Lunes a Viernes </strong></p>
+        <p>9:00 Hs A 18:00 Hs</p>
+        <p>¡Gracias por confiar en nosotros!</p>
+        <button id="cerrar-modal">Continuar</button>
+      </div>
+    </div>
+
+    <footer class="main-footer">
+    <div class="footer-content">
+      <h3>CONTACTOS:</h3>
+      <p>
+        <a href="mailto:raularnol@yahoo.com">Gmail</a> |
+        <a href="tel:+5492995308980">Teléfono</a>
+      </p>
+    </div>
+    <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
+  </footer>
+
+
+
+    <script src="JS/contactos.js"></script>
+</body>
+</html>
