--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/contactos.css">
 </head>
 <body>
+   <-- de aca -->
   <header>
     <div class="logo"> 
       <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100"> 
@@ -73,6 +74,7 @@
         </div>
     </section>
   </main>
+  <--hasta aca es todo nuevo-->
   <-- aca aranco yo-->
    <h2>Nos encontramos en <span>Neuquén</span> , visitanos</h2>
     <section class="mapa">
