--- a/servicios.html
+++ b/servicios.html
@@ -14,7 +14,7 @@
 
     <div class="menu" id="menu">☰</div>
 
-    <nav id="nav">
+    <nav id="navegacion">
         <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="servicios.html" class="activo">Servicios</a></li>
