--- a/servicios.html
+++ b/servicios.html
@@ -103,8 +103,9 @@
                      <a href="mailto:raularnol@yahoo.com">Gmail</a> |
                 <a href="tel:+5492995308980">Teléfono</a>
                   </p>
-        </div>
 
+        </div>
+             <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
     </footer>
    <div id="modal-cargando" class="modal-cargando">
   <div class="modal-contenido">
