--- a/servicios.html
+++ b/servicios.html
@@ -11,9 +11,7 @@
     <div class="logo">
         <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100">
     </div>
-
-    <div class="menu" id="menu">☰</div>
-
+     <div class="menu-toggle" id="menu-toggle">☰</div>
     <nav id="navegacion">
         <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -106,7 +104,7 @@
 
         </div>
              <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
-             
+
     </footer>
    <div id="modal-cargando" class="modal-cargando">
   <div class="modal-contenido">
