Modificando js contacto

--- a/contacto.html
+++ b/contacto.html
@@ -1,11 +1,10 @@
-HTML: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es-arg">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="css/contactos.css">
-    <!-- link para los iconitos de las tarjetas -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -13,7 +12,6 @@ HTML: <!DOCTYPE html>
     <div class="logo"> 
       <img src="galeria/logo.png" alt="HR Turbos" height="80" width="100"> 
     </div> 
-    <!-- Icono de lineas = -->
     <div class="menu-toggle" id="menu-toggle">☰</div>
     
     <nav id="navegacion">
@@ -29,7 +27,7 @@ HTML: <!DOCTYPE html>
     <h1 class="intro">CONTÁCTANOS</h1> 
     <p class="subtitulo">¿Necesitás algún arreglo o mejora en tu vehículo? Contactate con nosotros a través de estos medios.</p> 
 
-    <!-- WhatsApp -->
+   
     <section class="grid-container">
       <div class = contacto.cj>
       <i class="fab fa-whatsapp"></i>
@@ -44,7 +42,7 @@ HTML: <!DOCTYPE html>
       </div>
     </section>
 
-    <!-- Correo -->
+
     <section class="grid-container">
       <div class = contacto.cj>
       <i class="fas fa-envelope"></i>
@@ -57,7 +55,6 @@ HTML: <!DOCTYPE html>
       </div>
       </div>
     </section>
-   <!-- Teléfonos -->
    <section class="grid-container">
     <div class = contacto.cj>
     <i class="fab fa-phone"></i>
@@ -67,7 +64,7 @@ HTML: <!DOCTYPE html>
     </div>
     </div>
   </section>
-  <-- aca aranco yo-->
+
    <h2>Nos encontramos en <span>Neuquén</span> , visitanos</h2>
     <section class="mapa">
         <iframe 
