--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
     </footer>
         
-   <script src="index.js"></script>
+   <script src="JS/index.js"></script>
 
 
 </body>
