Coriigiendo id de nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="galeria/logo.png" alt="HR logo" height="80" width="150">
         </div>
         <div class="menu-toggle" id="menu-toggle">☰</div>
-        <nav id="navegación">
+        <nav id="navegacion">
             <ul id="lista">
                 <li><a href="index.html"class="activo">Inicio</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
