Agregando modal cargando

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="es-ar">
-<head
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HR Turbos</title>
@@ -48,9 +47,15 @@
         </div>
         <p class="copyright">&copy; 2025 HR Turbos. Todos los derechos reservados.</p>
     </footer>
-        
-   <script src="JS/index.js"></script>
+        <div id="modal-cargando" class="modal-cargando">
+    <div class="modal-contenido">
+      <div class="loader"></div>
+      <p>Cargando...</p>
+      </div>
+    </div>
 
+    <script src="script.js"></script>
+   <script src="JS/index.js"></script>
 
 </body>
 </html>
