Modificando title de los archivos

--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HR Turbos - Taller Mecánico</title>
+    <title>Servicios - HR Turbos</title>
     <link rel="stylesheet" href="css/servicios.css">
 </head>
 <body>
