--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Productos - HR Turbos</title>
     <link rel="stylesheet" href="css/productos.css">
 </head>
 <body>
